--- a/Frontend/Dockerfile.k8s
+++ b/Frontend/Dockerfile.k8s
@@ -1,4 +1,4 @@
-# Multi-stage build for Vite frontend
+# Multi-stage build for Vite frontend (Kubernetes version)
 FROM node:20-alpine AS build
 
 WORKDIR /app
@@ -21,8 +21,8 @@ FROM nginx:alpine
 # Copy built files to nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration (default for docker-compose)
-COPY nginx.docker.conf /etc/nginx/conf.d/default.conf
+# Copy nginx configuration for Kubernetes
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
 EXPOSE 80
